deps/v8/test/message/arrow-missing.out
*%(basename)s:7: SyntaxError: Expected () to start arrow function, but got ';' instead of '=>'
function foo() { return(); }
                         ^
SyntaxError: Expected () to start arrow function, but got ';' instead of '=>'
